// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreamActions Bulk Total results < bulk limit after checking "Select all" checkbox, displays bulk select message 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <span>
      3 issues on this page selected.
      <a
        onClick={[Function]}
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Select all 
          </span>
          <span
            key="2"
          >
            600
          </span>
          <span
            key="3"
          >
             issues that match this search query.
          </span>
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`StreamActions Bulk Total results < bulk limit bulk resolves 1`] = `
<ModalDialog
  bsClass="modal"
  className="in"
  onClick={[Function]}
  role="document"
  style={Object {}}
  tabIndex="-1"
>
  <div
    className="in modal"
    onClick={[Function]}
    role="dialog"
    style={
      Object {
        "display": "block",
      }
    }
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
        role="document"
      >
        <div
          className="modal-body"
        >
          <div>
            <p
              style={
                Object {
                  "marginBottom": "20px",
                }
              }
            >
              <strong>
                <span
                  key="8"
                >
                  <span
                    key="0"
                  >
                    Are you sure you want to 
                  </span>
                  <span
                    key="2"
                  >
                    resolve
                  </span>
                  <span
                    key="3"
                  >
                     all 
                  </span>
                  <span
                    key="5"
                  >
                    600
                  </span>
                  <span
                    key="6"
                  >
                     issues that match the search?
                  </span>
                </span>
              </strong>
            </p>
            <ExtraDescription
              all={true}
              query=""
              queryCount={600}
            >
              <p
                className="error"
              >
                <strong>
                  <span
                    key="5"
                  >
                    <span
                      key="0"
                    >
                      This will apply to all 
                    </span>
                    <span
                      key="2"
                    >
                      600
                    </span>
                    <span
                      key="3"
                    >
                       issues matched in this project!
                    </span>
                  </span>
                </strong>
              </p>
            </ExtraDescription>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <Button
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <StyledButton
              aria-label="Cancel"
              disabled={false}
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "marginRight": 10,
                }
              }
            >
              <Component
                aria-label="Cancel"
                className="css-cmo08-StyledButton-getColors e17811v30"
                disabled={false}
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              >
                <button
                  aria-label="Cancel"
                  className="css-cmo08-StyledButton-getColors e17811v30"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                >
                  <ButtonLabel>
                    <Component
                      className="css-1lzmoq1-ButtonLabel e17811v31"
                    >
                      <Flex
                        align="center"
                        className="css-1lzmoq1-ButtonLabel e17811v31"
                      >
                        <Base
                          align="center"
                          className="e17811v31 css-1br8hoo-ButtonLabel"
                        >
                          <div
                            className="e17811v31 css-1br8hoo-ButtonLabel"
                            is={null}
                          >
                            Cancel
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </ButtonLabel>
                </button>
              </Component>
            </StyledButton>
          </Button>
          <Button
            autoFocus={true}
            data-test-id="confirm-modal"
            disabled={false}
            onClick={[Function]}
            priority="primary"
          >
            <StyledButton
              aria-label="Bulk resolve issues"
              autoFocus={true}
              data-test-id="confirm-modal"
              disabled={false}
              onClick={[Function]}
              priority="primary"
              role="button"
            >
              <Component
                aria-label="Bulk resolve issues"
                autoFocus={true}
                className="css-1msljz8-StyledButton-getColors e17811v30"
                data-test-id="confirm-modal"
                disabled={false}
                onClick={[Function]}
                priority="primary"
                role="button"
              >
                <button
                  aria-label="Bulk resolve issues"
                  autoFocus={true}
                  className="css-1msljz8-StyledButton-getColors e17811v30"
                  data-test-id="confirm-modal"
                  disabled={false}
                  onClick={[Function]}
                  priority="primary"
                  role="button"
                >
                  <ButtonLabel>
                    <Component
                      className="css-1lzmoq1-ButtonLabel e17811v31"
                    >
                      <Flex
                        align="center"
                        className="css-1lzmoq1-ButtonLabel e17811v31"
                      >
                        <Base
                          align="center"
                          className="e17811v31 css-1br8hoo-ButtonLabel"
                        >
                          <div
                            className="e17811v31 css-1br8hoo-ButtonLabel"
                            is={null}
                          >
                            Bulk resolve issues
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </ButtonLabel>
                </button>
              </Component>
            </StyledButton>
          </Button>
        </div>
      </div>
    </div>
  </div>
</ModalDialog>
`;

exports[`StreamActions Bulk Total results < bulk limit can bulk select 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <strong>
      <span
        key="5"
      >
        <span
          key="0"
        >
          Selected all 
        </span>
        <span
          key="2"
        >
          600
        </span>
        <span
          key="3"
        >
           issues that match this search query.
        </span>
      </span>
    </strong>
  </div>
</div>
`;

exports[`StreamActions Bulk Total results > bulk limit after checking "Select all" checkbox, displays bulk select message 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <span>
      3 issues on this page selected.
      <a
        onClick={[Function]}
      >
        <span
          key="5"
        >
          <span
            key="0"
          >
            Select the first 
          </span>
          <span
            key="2"
          >
            1,000
          </span>
          <span
            key="3"
          >
             issues that match this search query.
          </span>
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`StreamActions Bulk Total results > bulk limit bulk resolves 1`] = `
<ModalDialog
  bsClass="modal"
  className="in"
  onClick={[Function]}
  role="document"
  style={Object {}}
  tabIndex="-1"
>
  <div
    className="in modal"
    onClick={[Function]}
    role="dialog"
    style={
      Object {
        "display": "block",
      }
    }
    tabIndex="-1"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-content"
        role="document"
      >
        <div
          className="modal-body"
        >
          <div>
            <p
              style={
                Object {
                  "marginBottom": "20px",
                }
              }
            >
              <strong>
                <span
                  key="8"
                >
                  <span
                    key="0"
                  >
                    Are you sure you want to 
                  </span>
                  <span
                    key="2"
                  >
                    resolve
                  </span>
                  <span
                    key="3"
                  >
                     the first 
                  </span>
                  <span
                    key="5"
                  >
                    1,000
                  </span>
                  <span
                    key="6"
                  >
                     issues that match the search?
                  </span>
                </span>
              </strong>
            </p>
            <ExtraDescription
              all={true}
              query=""
              queryCount={1500}
            >
              <p
                className="error"
              >
                <strong>
                  <span
                    key="5"
                  >
                    <span
                      key="0"
                    >
                      This will apply to the first 
                    </span>
                    <span
                      key="2"
                    >
                      1,000
                    </span>
                    <span
                      key="3"
                    >
                       issues matched in this project!
                    </span>
                  </span>
                </strong>
              </p>
            </ExtraDescription>
          </div>
        </div>
        <div
          className="modal-footer"
        >
          <Button
            disabled={false}
            onClick={[Function]}
            style={
              Object {
                "marginRight": 10,
              }
            }
          >
            <StyledButton
              aria-label="Cancel"
              disabled={false}
              onClick={[Function]}
              role="button"
              style={
                Object {
                  "marginRight": 10,
                }
              }
            >
              <Component
                aria-label="Cancel"
                className="css-cmo08-StyledButton-getColors e17811v30"
                disabled={false}
                onClick={[Function]}
                role="button"
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              >
                <button
                  aria-label="Cancel"
                  className="css-cmo08-StyledButton-getColors e17811v30"
                  disabled={false}
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "marginRight": 10,
                    }
                  }
                >
                  <ButtonLabel>
                    <Component
                      className="css-1lzmoq1-ButtonLabel e17811v31"
                    >
                      <Flex
                        align="center"
                        className="css-1lzmoq1-ButtonLabel e17811v31"
                      >
                        <Base
                          align="center"
                          className="e17811v31 css-1br8hoo-ButtonLabel"
                        >
                          <div
                            className="e17811v31 css-1br8hoo-ButtonLabel"
                            is={null}
                          >
                            Cancel
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </ButtonLabel>
                </button>
              </Component>
            </StyledButton>
          </Button>
          <Button
            autoFocus={true}
            data-test-id="confirm-modal"
            disabled={false}
            onClick={[Function]}
            priority="primary"
          >
            <StyledButton
              aria-label="Bulk resolve issues"
              autoFocus={true}
              data-test-id="confirm-modal"
              disabled={false}
              onClick={[Function]}
              priority="primary"
              role="button"
            >
              <Component
                aria-label="Bulk resolve issues"
                autoFocus={true}
                className="css-1msljz8-StyledButton-getColors e17811v30"
                data-test-id="confirm-modal"
                disabled={false}
                onClick={[Function]}
                priority="primary"
                role="button"
              >
                <button
                  aria-label="Bulk resolve issues"
                  autoFocus={true}
                  className="css-1msljz8-StyledButton-getColors e17811v30"
                  data-test-id="confirm-modal"
                  disabled={false}
                  onClick={[Function]}
                  priority="primary"
                  role="button"
                >
                  <ButtonLabel>
                    <Component
                      className="css-1lzmoq1-ButtonLabel e17811v31"
                    >
                      <Flex
                        align="center"
                        className="css-1lzmoq1-ButtonLabel e17811v31"
                      >
                        <Base
                          align="center"
                          className="e17811v31 css-1br8hoo-ButtonLabel"
                        >
                          <div
                            className="e17811v31 css-1br8hoo-ButtonLabel"
                            is={null}
                          >
                            Bulk resolve issues
                          </div>
                        </Base>
                      </Flex>
                    </Component>
                  </ButtonLabel>
                </button>
              </Component>
            </StyledButton>
          </Button>
        </div>
      </div>
    </div>
  </div>
</ModalDialog>
`;

exports[`StreamActions Bulk Total results > bulk limit can bulk select 1`] = `
<div
  className="row stream-select-all-notice"
>
  <div
    className="col-md-12"
  >
    <strong>
      <span
        key="5"
      >
        <span
          key="0"
        >
          Selected up to the first 
        </span>
        <span
          key="2"
        >
          1,000
        </span>
        <span
          key="3"
        >
           issues that match this search query.
        </span>
      </span>
    </strong>
  </div>
</div>
`;
